# empty-rocket-with-diesel

./: Cargo.toml
tasks_db_lib/: .env  .gitignore  Cargo.toml  Diesel_Instructions_Steps1-6.md  diesel.toml  erd_tasks_db.md
tasks_db_lib/migrations/2025-06-12-005042_initial_migration/: down.sql  up.sql
tasks_db_lib/migrations/2025-06-12-010141_seed_data/: up.sql
tasks_db_lib/src/: crud.rs  enums.rs  lib.rs  models.rs  models_generated.rs  schema.rs
