[package]
name = "tasks_db_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
diesel = { version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
r2d2 = "0.8"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
